crates/reinhardt-template/crates/templates-macros/tests/ui/fail/backslash.rs
use reinhardt_templates_macros::template;

fn main() {
    let _ = template!("emails\\welcome.html");
}
